# run-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  runAll.sh  runAllWin.sh  travis.sh
assignment5/beziercurve/: CubicBezierCurve.h  test.cpp
assignment5/dice/: CMakeLists.txt  dice.h  game.cpp  game.h  player.cpp  player.h  seven-main.cpp
assignment5/modcounter/: test.cpp
assignment5/syntactic_sugar/: syntax.cpp
assignment6/: CMakeLists.txt  high_res.txt  low_res.txt  run.sh  transaction_
assignment6/graph/: Graph.h
assignment6/mixin/: BezierCurve.cpp  Circle.cpp  Circle.h  main.cpp
assignment6/transactions/: Transaction.cpp  Transaction.h  main.cpp
assignment7/: CMakeLists.txt
assignment7/collect/: collect.h  main.cpp
assignment7/signal/: Signal.h  main.cpp
assignment7/template-refactoring/: ISBN.h  main.cpp
assignment7/variant/: Variant.h  main.cpp
beziercurve/: runWin.sh  test.cpp
dice/: CMakeLists.txt  dice.cpp  dice.h  game.cpp  game.h  mud-main.cpp  player.cpp  player.h  run.sh
graph/: CMakeLists.txt  Graph.h  main.cpp
mixin/: BezierCurve.h  CMakeLists.txt  Cached.h
modcounter/: CMakeLists.txt
syntactic_sugar/: syntax.cpp
task1.1/: CMakeLists.txt  README.md  greet_world  greet_world.asm  greet_world.cpp  run.sh  runWin.sh
task1.2/: CMakeLists.txt  provider.cpp  provider.h  provider_make.txt  providerlibtest.cpp  run.sh  runWin.sh
task1.3/: CMakeLists.txt  addressdata.txt  invalid_addresses.txt  run.sh  runWin.sh  valid_addresses.txt  validate_emails.cpp
task1.4/: CMakeLists.txt  count_words.cpp  hgg.txt  hgg_protagonists.txt  run.sh  runWin.sh
task2.1/: CMakeLists.txt  montecarlopi.cpp  montecarlopi.txt  run.sh  runWin.sh
task2.2/: CMakeLists.txt  businesscard_raytracer.cpp  run.sh  runWin.sh
task2.3/: CMakeLists.txt  FileContent.cpp  FileContent.h  Value.cpp  Value.h  binaryfileformat.cpp  binaryfileformat.h  fileformat-test.cpp  fileformat-test.txt  fileformat-testdata.h  run.sh  runWin.sh  textfileformat.cpp  textfileformat.h
task3.1/: CMakeLists.txt  engine.cpp  engine.h  main.cpp  particle.cpp  particle.h  particles.pro  widget.cpp  widget.h
task3.2/: CMakeLists.txt  externallibrary.h  runner.cpp
task3.3/: CMakeLists.txt  Graph.cpp  Graph.h  GraphFactory.cpp  GraphFactory.h  InstanceCounter.cpp  InstanceCounter.h  graph-test.cpp  run.sh  runWin.sh
task4.1/: .gitignore  CMakeLists.txt  sin.cpp
task4.2/: CMakeLists.txt  INSTALL.md  ipc_player.cpp  ipc_player.h  ipc_viewer.cpp  ipc_viewer.h  player.cpp  run.sh  runWin.sh  shared_highscore.cpp  viewer.cpp
task4.3/: CMakeLists.txt  tree_streambuf-test.cpp  tree_streambuf.cpp  tree_streambuf.h
task4.4/: CMakeLists.txt  tea_filebuf-test.cpp  tea_filebuf.cpp  tea_filebuf.h
task5.1/: CMakeLists.txt  ModuloCounter.cpp  ModuloCounter.h  test.cpp
task5.2/: CMakeLists.txt
task5.3/: CMakeLists.txt  dice.cpp  dice.h  game.cpp  game.h  mud-main.cpp  player.cpp  player.h  run.sh  seven-main.cpp
task5.4/: CMakeLists.txt  syntax.cpp
transactions/: CMakeLists.txt  Transaction.cpp  Transaction.h  main.cpp
